[gd_scene load_steps=5 format=4 uid="uid://daya0615v7mpd"]

[ext_resource type="Script" uid="uid://doijb3b5grvud" path="res://levels/level_root.gd" id="1_levelroot"]
[ext_resource type="TileSet" uid="uid://j1igc33x6ilw" path="res://assets/autotiles/exterior.tres" id="2_tileset"]
[ext_resource type="PackedScene" uid="uid://bac4pj0ebig66" path="res://entities/player/player.tscn" id="3_player"]
[ext_resource type="PackedScene" uid="uid://b47ctse3t2a8n" path="res://ui/hud/hud.tscn" id="4_hud"]

[node name="NpcHouse" type="Node2D"]
script = ExtResource("1_levelroot")
level_id = &"npc_house"

[node name="GroundMaps" type="Node2D" parent="."]

[node name="Ground" type="TileMapLayer" parent="GroundMaps"]
tile_map_data = PackedByteArray("AAANAAYAAwABAAEAAAANAAUAAwABAAAAAAANAAQAAwABAAAAAAANAAMAAwABAAAAAAANAAIAAwABAAAAAAANAAEAAwABAAAAAAANAAAAAwABAAAAAAANAP//AwABAAAAAAANAP7/AwABAAAAAAANAP3/AwACAAIAAAAMAAYAAwADAAAAAAAMAAUAAwAAAAMAAAAMAAQABwAAAAMAAAAMAAMABwAAAAMAAAAMAAIABwAAAAMAAAAMAAEABwAAAAMAAAAMAAAABwAAAAMAAAAMAP//BwAAAAMAAAAMAP7/AwAAAAMAAAAMAP3/AwABAAIAAAALAAYAAwADAAAAAAALAAUABwAAAAMAAAALAAQABwAAAAMAAAALAAMABwAAAAMAAAALAAIAAwAAAAMAAAALAAEABwAAAAMAAAALAAAAAwAAAAMAAAALAP//AwAAAAMAAAALAP7/AwAAAAMAAAALAP3/AwABAAIAAAAKAAYAAwADAAAAAAAKAAUAAwAAAAMAAAAKAAQAAwAAAAMAAAAKAAMAAwAAAAMAAAAKAAIABwAAAAMAAAAKAAEABwAAAAMAAAAKAAAAAwAAAAMAAAAKAP//AwAAAAMAAAAKAP7/BwAAAAMAAAAKAP3/AwABAAIAAAAJAAYAAwADAAAAAAAJAAUABwAAAAMAAAAJAAQABwAAAAMAAAAJAAMABwAAAAMAAAAJAAIAAwAAAAMAAAAJAAEABwAAAAMAAAAJAAAABwAAAAMAAAAJAP//BwAAAAMAAAAJAP7/AwAAAAMAAAAJAP3/AwABAAIAAAAIAAYAAwADAAAAAAAIAAUAAwAAAAMAAAAIAAQABwAAAAMAAAAIAAMAAwAAAAMAAAAIAAIAAwAAAAMAAAAIAAEABwAAAAMAAAAIAAAABwAAAAMAAAAIAP//AwAAAAMAAAAIAP7/AwAAAAMAAAAIAP3/AwABAAIAAAAHAAYAAwADAAAAAAAHAAUABwAAAAMAAAAHAAQABwAAAAMAAAAHAAMAAwAAAAMAAAAHAAIAAwAAAAMAAAAHAAEABwAAAAMAAAAHAAAABwAAAAMAAAAHAP//AwAAAAMAAAAHAP7/AwAAAAMAAAAHAP3/AwABAAIAAAAGAAYAAwADAAAAAAAGAAUABwAAAAMAAAAGAAQABwAAAAMAAAAGAAMABwAAAAMAAAAGAAIAAwAAAAMAAAAGAAEABwAAAAMAAAAGAAAABwAAAAMAAAAGAP//BwAAAAMAAAAGAP7/AwAAAAMAAAAGAP3/AwABAAIAAAAFAAYAAwADAAAAAAAFAAUAAwAAAAMAAAAFAAQABwAAAAMAAAAFAAMAAwAAAAMAAAAFAAIAAwAAAAMAAAAFAAEABwAAAAMAAAAFAAAABwAAAAMAAAAFAP//AwAAAAMAAAAFAP7/AwAAAAMAAAAFAP3/AwABAAIAAAAEAAYAAwADAAAAAAAEAAUABwAAAAMAAAAEAAQAAwAAAAMAAAAEAAMABwAAAAMAAAAEAAIABwAAAAMAAAAEAAEABwAAAAMAAAAEAAAABwAAAAMAAAAEAP//AwAAAAMAAAAEAP7/BwAAAAMAAAAEAP3/AwABAAIAAAADAAYAAwADAAAAAAADAAUAAwAAAAMAAAADAAQAAwAAAAMAAAADAAMAAwAAAAMAAAADAAIABwAAAAMAAAADAAEAAwAAAAMAAAADAAAAAwAAAAMAAAADAP//BwAAAAMAAAADAP7/AwAAAAMAAAADAP3/AwABAAIAAAACAAYAAwADAAAAAAACAAUAAwAAAAMAAAACAAQABwAAAAMAAAACAAMAAwAAAAMAAAACAAIABwAAAAMAAAACAAEABwAAAAMAAAACAAAABwAAAAMAAAACAP//AwAAAAMAAAACAP7/BwAAAAMAAAACAP3/AwABAAIAAAABAAYAAwADAAAAAAABAAUAAwAAAAMAAAABAAQABwAAAAMAAAABAAMABwAAAAMAAAABAAIAAwAAAAMAAAABAAEABwAAAAMAAAABAAAABwAAAAMAAAABAP//AwAAAAMAAAABAP7/AwAAAAMAAAABAP3/AwABAAIAAAAAAAYAAwADAAAAAAAAAAUAAwAAAAMAAAAAAAQAAwAAAAMAAAAAAAMABwAAAAMAAAAAAAIABwAAAAMAAAAAAAEAAwAAAAMAAAAAAAAABwAAAAMAAAAAAP//AwAAAAMAAAAAAP7/AwAAAAMAAAAAAP3/AwABAAIAAAD//wYAAwADAAAAAAD//wUAAwAAAAMAAAD//wQAAwAAAAMAAAD//wMABwAAAAMAAAD//wIAAwAAAAMAAAD//wEABwAAAAMAAAD//wAABwAAAAMAAAD/////BwAAAAMAAAD///7/BwAAAAMAAAD///3/AwABAAIAAAD+/wYAAwACAAAAAAD+/wUAAwADAAIAAAD+/wQAAwADAAIAAAD+/wMAAwADAAIAAAD+/wIAAwADAAIAAAD+/wEAAwADAAIAAAD+/wAAAwADAAIAAAD+////AwADAAIAAAD+//7/AwADAAIAAAD+//3/AwADAAEAAAA=")
tile_set = ExtResource("2_tileset")

[node name="SoilOverlay" type="TileMapLayer" parent="GroundMaps"]
tile_map_data = PackedByteArray("AAAFAP3/CgAQABsAAAAFAP7/CgAQABwAAAAFAP//CgAQAB0AAAAFAAAACgAQAB4AAAAFAAEACgAQAB8AAAAGAP3/CgARABsAAAAGAP7/CgARABwAAAAGAP//CgARAB0AAAAGAAAACgARAB4AAAAGAAEACgARAB8AAAAHAP3/CgASABsAAAAHAP7/CgASABwAAAAHAP//CgASAB0AAAAHAAAACgASAB4AAAAHAAEACgASAB8AAAAIAP3/CgATABsAAAAIAP7/CgATABwAAAAIAP//CgATAB0AAAAIAAAACgATAB4AAAAIAAEACgATAB8AAAAJAP3/CgAUABsAAAAJAP7/CgAUABwAAAAJAP//CgAUAB0AAAAJAAAACgAUAB4AAAAJAAEACgAUAB8AAAA=")
tile_set = ExtResource("2_tileset")

[node name="SoilWetOverlay" type="TileMapLayer" parent="GroundMaps"]
tile_set = ExtResource("2_tileset")

[node name="Player" parent="." instance=ExtResource("3_player")]
position = Vector2(40, 0)

[node name="HUD" parent="." instance=ExtResource("4_hud")]
